force-app/main/default/objects/Service_Delivery__c/Service_Delivery__c.object-meta.xml
<CustomObject>
    <description>DLI</description>
    <label>Service Delivery</label>
    <nameField>
        <displayFormat>SDN-{000000}</displayFormat>
        <label>Service Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>