force-app/main/default/objects/Service_Delivery__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <description>SDS-2392</description>
    <label>Administrator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>