force-app/main/default/objects/Service_Delivery__c/fields/Amount_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Redeemed__c</fullName>
    <label>Amount Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>