force-app/main/default/objects/Service_Delivery__c/fields/Certified_Instructor_2_Organization__c.field-meta.xml
<CustomField>
    <fullName>Certified_Instructor_2_Organization__c</fullName>
    <label>Certified Instructor 2 Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>