force-app/main/default/objects/Service_Delivery__c/fields/Certified_Instructor_3__c.field-meta.xml
<CustomField>
    <fullName>Certified_Instructor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Instructor 3</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please use only the NVIDIA DLI Certified Instructors</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>NVIDIA DLI Certified Instructors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Deliveries (Certified Instructor 3)</relationshipLabel>
    <relationshipName>Service_Deliveries2</relationshipName>
    <type>Lookup</type>
</CustomField>