force-app/main/default/objects/Service_Delivery__c/fields/Certified_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Certified_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Instructor</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please only select Contacts from the NVIDIA DLI Certified Instructor Account</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>NVIDIA DLI Certified Instructors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>