force-app/main/default/objects/Service_Delivery__c/fields/Classroom_Password__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Password__c</fullName>
    <description>SDS-2392</description>
    <label>Classroom Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>