force-app/main/default/objects/Service_Delivery__c/fields/Classroom_URL__c.field-meta.xml
<CustomField>
    <fullName>Classroom_URL__c</fullName>
    <description>SDS-2392</description>
    <label>Classroom URL</label>
    <type>Url</type>
</CustomField>