force-app/main/default/objects/Service_Delivery__c/fields/Code_validity_start_date__c.field-meta.xml
<CustomField>
    <fullName>Code_validity_start_date__c</fullName>
    <description>SDS-2392</description>
    <label>Code validity start date</label>
    <type>Date</type>
</CustomField>