force-app/main/default/objects/Service_Delivery__c/fields/Current_PO__c.field-meta.xml
<CustomField>
    <fullName>Current_PO__c</fullName>
    <label>Current PO #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>