force-app/main/default/objects/Service_Delivery__c/fields/Customer_Followup_Completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Followup_Completed__c</fullName>
    <label>Customer Followup Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>