force-app/main/default/objects/Service_Delivery__c/fields/Customer_Training_Details_Collected__c.field-meta.xml
<CustomField>
    <fullName>Customer_Training_Details_Collected__c</fullName>
    <label>Customer Training Details Collected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>