force-app/main/default/objects/Service_Delivery__c/fields/Delivery_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Time__c</fullName>
    <label>Delivery End Time</label>
    <type>DateTime</type>
</CustomField>