force-app/main/default/objects/Service_Delivery__c/fields/DLI_Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>DLI_Event_Manager__c</fullName>
    <label>DLI Event Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>