force-app/main/default/objects/Service_Delivery__c/fields/Email_Confirmation_Sent_to_Instructors__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_Sent_to_Instructors__c</fullName>
    <label>Email Confirmation Sent to Instructors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>