force-app/main/default/objects/Service_Delivery__c/fields/End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>* SDS-2395</description>
    <label>End Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>