force-app/main/default/objects/Service_Delivery__c/fields/Finalized_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Number_of_Attendees__c</fullName>
    <label>Finalized Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>