force-app/main/default/objects/Service_Delivery__c/fields/FYQ_Ambassador_Paid__c.field-meta.xml
<CustomField>
    <fullName>FYQ_Ambassador_Paid__c</fullName>
    <label>FYQ Ambassador Paid</label>
    <type>Date</type>
</CustomField>