force-app/main/default/objects/Service_Delivery__c/fields/Instructor_Organization__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Organization__c</fullName>
    <label>Instructor Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>