force-app/main/default/objects/Service_Delivery__c/fields/Is_this_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Public__c</fullName>
    <label>Is this Public?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>