force-app/main/default/objects/Service_Delivery__c/fields/Number_of_Attendees_Trained__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees_Trained__c</fullName>
    <label>Number of Attendees Trained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>