force-app/main/default/objects/Service_Delivery__c/fields/of_codes_valid_for_90_course__c.field-meta.xml
<CustomField>
    <fullName>of_codes_valid_for_90_course__c</fullName>
    <description>SDS-2392</description>
    <label># of codes valid for $90 course</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>