force-app/main/default/objects/Service_Delivery__c/fields/Public_or_Private__c.field-meta.xml
<CustomField>
    <fullName>Public_or_Private__c</fullName>
    <label>Public or Private</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>