force-app/main/default/objects/Service_Delivery__c/fields/Public_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Registration_Link__c</fullName>
    <label>Public Registration Link</label>
    <type>Url</type>
</CustomField>