force-app/main/default/objects/Service_Delivery__c/fields/Service_Request_ID_SRID__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_ID_SRID__c</fullName>
    <displayFormat>SRID-{000000}</displayFormat>
    <label>Service Request ID (SRID)</label>
    <type>AutoNumber</type>
</CustomField>