force-app/main/default/objects/Service_Delivery__c/fields/Session_Chair_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Chair_Name__c</fullName>
    <description>SDS-2392</description>
    <label>Session Chair Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>