force-app/main/default/objects/Service_Delivery__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <formula>HYPERLINK($CustomMetadata.Survey_Link__mdt.Service_Delivery_Survey_Link.Link__c + &quot;&amp;cId=&quot;+ Certified_Instructor__c +&quot;&amp;parentId=&quot;+Id, &quot;Survey Link&quot;)</formula>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>