force-app/main/default/objects/Service_Delivery__c/fields/Teacher_Assistant_TA_Count__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Assistant_TA_Count__c</fullName>
    <label>Teacher Assistant (TA) Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>