force-app/main/default/objects/Service_Delivery__c/fields/Teacher_Assistant_TA_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Assistant_TA_Name__c</fullName>
    <label>Teacher Assistant (TA) Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>