force-app/main/default/objects/Service_Delivery__c/fields/Technical_Setup_Sheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Technical_Setup_Sheet_Sent__c</fullName>
    <label>Technical Setup Sheet Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>