force-app/main/default/objects/Service_Delivery__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UTC -12</fullName>
            </value>
            <value>
                <fullName>UTC -11</fullName>
            </value>
            <value>
                <fullName>UTC -10</fullName>
            </value>
            <value>
                <fullName>UTC -9</fullName>
            </value>
            <value>
                <fullName>UTC -8</fullName>
            </value>
            <value>
                <fullName>UTC -7</fullName>
            </value>
            <value>
                <fullName>UTC -6</fullName>
            </value>
            <value>
                <fullName>UTC -5</fullName>
            </value>
            <value>
                <fullName>UTC -4</fullName>
            </value>
            <value>
                <fullName>UTC -3</fullName>
            </value>
            <value>
                <fullName>UTC -2</fullName>
            </value>
            <value>
                <fullName>UTC -1</fullName>
            </value>
            <value>
                <fullName>UTC 0</fullName>
            </value>
            <value>
                <fullName>UTC +1</fullName>
            </value>
            <value>
                <fullName>UTC +2</fullName>
            </value>
            <value>
                <fullName>UTC +3</fullName>
            </value>
            <value>
                <fullName>UTC +4</fullName>
            </value>
            <value>
                <fullName>UTC +5</fullName>
            </value>
            <value>
                <fullName>UTC +6</fullName>
            </value>
            <value>
                <fullName>UTC +7</fullName>
            </value>
            <value>
                <fullName>UTC +8</fullName>
            </value>
            <value>
                <fullName>UTC +9</fullName>
            </value>
            <value>
                <fullName>UTC +10</fullName>
            </value>
            <value>
                <fullName>UTC +11</fullName>
            </value>
            <value>
                <fullName>UTC +12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>