force-app/main/default/objects/Service_Delivery__c/fields/Training_Service__c.field-meta.xml
<CustomField>
    <fullName>Training_Service__c</fullName>
    <businessOwnerUser>swagner@nvidia.com.trprod</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Service</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Training_Service_Catalog__c.Active__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Training_Service_Catalog__c</referenceTo>
    <relationshipLabel>Service Deliveries (Training Service)</relationshipLabel>
    <relationshipName>Service_Deliveries1</relationshipName>
    <type>Lookup</type>
</CustomField>