force-app/main/default/objects/Service_Delivery__c/fields/Training_Service_City__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_City__c</fullName>
    <label>Training Service City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>