force-app/main/default/objects/Service_Delivery__c/fields/Training_Service_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_Confirmed__c</fullName>
    <label>Training Service Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>