force-app/main/default/objects/Service_Delivery__c/fields/Training_Service_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_Confirmed_Date__c</fullName>
    <label>Training Service Confirmed Date</label>
    <type>Date</type>
</CustomField>