force-app/main/default/objects/Service_Delivery__c/fields/Training_Service_State__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_State__c</fullName>
    <label>Training Service State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>