force-app/main/default/objects/Service_Delivery__c/fields/Training_Service_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_Street_Address__c</fullName>
    <label>Training Service Street Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>