force-app/main/default/objects/Service_Delivery__c/fields/Training_Service_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_Zipcode__c</fullName>
    <label>Training Service Zipcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>