force-app/main/default/objects/Service_Delivery__c/fields/USD_Expenses_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>USD_Expenses_Reimbursed__c</fullName>
    <label>USD Expenses Reimbursed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>