force-app/main/default/objects/Service_Delivery__c/fields/Virtual_Classroom__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Classroom__c</fullName>
    <description>SDS-2392</description>
    <inlineHelpText>Enter only numbers</inlineHelpText>
    <label>Virtual Classroom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>