force-app/main/default/objects/Service_Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Service_Request_ID_SRID__c</columns>
    <columns>Status__c</columns>
    <columns>Certified_Instructor__c</columns>
    <columns>Training_Service_Confirmed_Date__c</columns>
    <columns>Number_of_Attendees_Trained__c</columns>
    <columns>Delivery_Format__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>